--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -16,6 +16,44 @@
   authorconf = {true},
 }
 
+@CONFERENCE{eguconf,
+  author = {Izvekov, O. Y. and Cheprasov, I. A.},
+  title = {Effect of overpressure in dual porous media on well productivity},
+  booktitle = {The EGU General Assembly},
+  year = {2019},
+  language = {english},
+  authorconf = {true},
+}
+
+@CONFERENCE{ivtanconf,
+  author = {Cheprasov, I. A. and Izvekov, O. Y.},
+  title = {Effect of overpressure in dual porous media on well productivity},
+  booktitle = {XXXIV International Conference on Interaction of Intense Energy Fluxeswith Matter},
+  year = {2019},
+  language = {english},
+  authorconf = {true},
+}
+
+@CONFERENCE{miptconf,
+  author = {Чепрасов, И. А. and Извеков, О. Я. and Конюхов, А. В.},
+  title = {Моделирование избыточного давления в двойной пористой среде с упругим трещиноватым скелетом},
+  booktitle = {61 Научная Конференция МФТИ},
+  year = {2018},
+  language = {russian},
+  authorconf = {true},
+}
+
+@ARTICLE{fizzemli2020,
+  author = {Извеков, О. Я. and Конюхов, А. В. and Чепрасов, И. А.},
+  title = {Термодинамически согласованная модель фильтрации в среде с двойной пористостью с учетом рассеянного разрушения матрицы},
+  journal = {Физика земли},
+  year = {2020},
+  number = {5},
+  language = {russian},
+  authorother = {true},
+  authorconf = {true},
+}
+
 @ARTICLE{bib1,
   author = {Фамилия, И. О.},
   title = {Название статьи},
