--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -9,6 +9,80 @@
   language = {russian}
 }
 
+@BOOK{melik1983,
+  title={Аномально высокие пластовые давления на нефтяных и газовых месторождениях},
+  author={Мелик-Пашаев, В. С. and Халимов, Э. М. and Серегина, В. Н.},
+  year={1983},
+  publisher={Недра},
+  language = {russian}
+}
+
+@BOOK{golf1986,
+  title={Основы нефтепромысловой геологии и разработки трещиноватых коллекторов},
+  author={Голф-Рахт, Т. Д.},
+  year={1986},
+  publisher={Рипол Классик},
+  language = {russian}
+}
+
+@BOOK{lemaitre2012course,
+  title={A course on damage mechanics},
+  author={Lemaitre, Jean},
+  year={2012},
+  publisher={Springer Science \& Business Media},
+  language = {english}
+}
+
+@BOOK{murakami2012continuum,
+  title={Continuum damage mechanics: a continuum mechanics approach to the analysis of damage and fracture},
+  author={Murakami, Sumio},
+  volume={185},
+  year={2012},
+  publisher={Springer Science \& Business Media},
+  language = {english}
+}
+
+@BOOK{kondaurov2007,
+  title={Механика и термодинамика насыщенной пористой среды},
+  author={Кондауров, В. И.},
+  year={2007},
+  publisher={МФТИ М.},
+  language = {russian}
+}
+
+@article{izvekov2009,
+  title={Модель пористой среды с упругим трещиноватым скелетом},
+  author={Извеков, О. Я. and Кондауров, В. И.},
+  journal={Физика земли},
+  number={4},
+  pages={31--42},
+  year={2009},
+  publisher={Федеральное государственное унитарное предприятие Академический научно~…},
+  language = {russian}
+}
+
+@article{kuhn2012three,
+  title={Three-dimensional modeling study of the low-permeability petroleum system of the Bakken Formation},
+  author={Kuhn, Philipp P and {[et al.]}},
+  journal={AAPG bulletin},
+  volume={96},
+  number={10},
+  pages={1867--1897},
+  year={2012},
+  language = {english}
+}
+
+@article{izvekov2010,
+  title={О рассеянном разрушении пористых материалов с хрупким скелетом},
+  author={Извеков, О. Я. and Кондауров, В. И.},
+  journal={Известия Российской академии наук. Механика твердого тела},
+  number={3},
+  pages={164--187},
+  year={2010},
+  publisher={Федеральное государственное унитарное предприятие Академический научно~…},
+  language = {russian}
+}
+
 @BOOK{Sokolov,
   author = {Соколов, А. Н. and Сердобинцев, К. С.},
   editor = {Бочарова, В. М.},
@@ -41,12 +115,28 @@
   language = {russian}
 }
 
+@BOOK{coussy2004poromechanics,
+  title={Poromechanics},
+  author={Coussy, Olivier},
+  year={2004},
+  publisher={John Wiley \& Sons},
+  language = {english}
+}
+
 @BOOK{Management,
   title = {Управление бизнесом : сборник статей},
   address = {Нижний новгород},
   publisher = {Изд-во Нижегородского университета},
   year = {2009},
   numpages = {243},
+  language = {russian}
+}
+
+@BOOK{trusdell1975,
+  title={Первоначальный курс рациональной механики сплошных сред},
+  author={Трусделл, Клифорд and Гольдштейн, Р В and Ентов, В М},
+  year={1975},
+  publisher={Мир},
   language = {russian}
 }
 
@@ -212,19 +302,8 @@
 }
 
 @ARTICLE{Nasirova,
-  author =       {Насырова, Г. А.},
-  title =        {Модели государственного регулирования страховой деятельности
-                  [Электронный ресурс]},
-  journal =      {Вестник Финансовой академии},
-  year =         {2003},
-  number =       {4},
-  note =         {Режим доступа: http://vestnik.fa.ru/4(28)2003/4.html},
-  language =     {russian}
-}
-
-@ARTICLE{Nasirova2,
   author = {Насырова, Г. А.},
-  title = {Модели государственного регулирования страховой деятельности},
+  title = {Модели государственного регулирования страховой деятельности [Электронный ресурс]},
   journal = {Вестник Финансовой академии},
   year = {2003},
   media = {eresource},
@@ -445,6 +524,17 @@
   language = {russian}
 }
 
+@online{USGS,
+  title={Self-Sourced Bazhenov Fractured Reservoirs Assessment Unit 11740102},
+  author={Ulmishek, G. F.},
+  journal={US Geological Survey World World Petroleum Assessment},
+  year={2000},
+  medium={Электронный ресурс},
+  url = {https://certmapper.cr.usgs.gov/data/PubArchives/WEcont/regions/reg1/p1/tps/AU/au117412.pdf},
+  urldate = {20.06.2020},
+  language = {english}
+}
+
 % Real example
 % & в названии журнала надо экранировать
 % 10.1002/1521-4125(200007)23:7<581::AID-CEAT581>3.0.CO;2-P
@@ -500,6 +590,271 @@
   keywords = "Hydrophilic bonding",
   keywords = "Hydrophobic bonding",
   language = {russian}
+}
+
+@article{grytsenko2010numerical,
+  title={Numerical analysis of multi-crack large-scale plane problems with adaptive cross approximation and hierarchical matrices},
+  author={Grytsenko, T. and Galybin, A. N.},
+  journal={Engineering analysis with boundary elements},
+  volume={34},
+  number={5},
+  pages={501--510},
+  year={2010},
+  publisher={Elsevier},
+  language = {english}
+}
+
+@article{craft1959petroleum,
+  title={Petroleum reservoir engineering},
+  author={Craft, B. C. and Hawkins, M. F.},
+  journal={Englewood Cliffs, NJ},
+  pages={355},
+  year={1959},
+  language = {english}
+}
+
+@article{kocharyan2016,
+  title={Геомеханика разломов},
+  author={Кочарян, Г. Г.},
+  year={2016},
+  publisher={Общество с ограниченной ответственностью" Издательство ГЕОС"},
+  language = {russian}
+}
+
+@article{mehrabian2015gassmann,
+  title={Gassmann equations and the constitutive relations for multiple-porosity and multiple-permeability poroelasticity with applications to oil and gas shale},
+  author={Mehrabian, Amin and Abousleiman, Younane N},
+  journal={International Journal for Numerical and Analytical Methods in Geomechanics},
+  volume={39},
+  number={14},
+  pages={1547--1569},
+  year={2015},
+  publisher={Wiley Online Library},
+  language = {english}
+}
+
+@article{bai1995poromechanical,
+  title={Poromechanical response of fractured-porous rock masses},
+  author={Bai, Mao and Roegiers, Jean-Claude and Elsworth, Derek},
+  journal={Journal of Petroleum Science and Engineering},
+  volume={13},
+  number={3-4},
+  pages={155--168},
+  year={1995},
+  publisher={Elsevier},
+  language = {english}
+}
+
+@article{berryman2002models,
+  title={Models for computing geomechanical constants of double-porosity materials from the constituents' properties},
+  author={Berryman, J. G. and Pride, S. R.},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={107},
+  number={B3},
+  pages={ECV--2},
+  year={2002},
+  publisher={Wiley Online Library},
+  language = {english}
+}
+
+@article{muha2018,
+  title={Методы локальной реконструкции тектонических напряжений по кинематическим данным: физическая несостоятельность и ложные цели. Ч. I},
+  author={Мухамедиев, Ш. А.},
+  journal={Физика Земли.},
+  number={6},
+  pages={1},
+  year={2018},
+  language = {russian}
+}
+
+% @article{wu2014generalized,
+%   title={A generalized framework model for the simulation of gas production in unconventional gas reservoirs},
+%   author={Wu, Yu-Shu and Li, Jianfang and Ding, Didier and Wang, Cong and Di, Yuan and others},
+%   journal={Spe Journal},
+%   volume={19},
+%   number={05},
+%   pages={845--857},
+%   year={2014},
+%   publisher={Society of Petroleum Engineers},
+%   language = {english}
+% }
+
+@article{thompson2010modeling,
+  title={Modeling well performance data from overpressured shale gas reservoirs},
+  author={Thompson, J. M. and {[et al.]}},
+  journal={Canadian Unconventional Resources and International Petroleum Conference},
+  year={2010},
+  publisher={Society of Petroleum Engineers},
+  language = {english}
+}
+
+@article{barenblatt1960basic,
+  title={Basic concepts in the theory of seepage of homogeneous liquids in fissured rocks [strata]},
+  author={Barenblatt, G. I. and Zheltov, I. P. and Kochina, I. N.},
+  journal={Journal of applied mathematics and mechanics},
+  volume={24},
+  number={5},
+  pages={1286--1303},
+  year={1960},
+  publisher={Pergamon},
+  language = {english}
+}
+
+@article{engelder1990natural,
+  title={Natural hydraulic fracturing},
+  author={Engelder, Terry and Lacazette, Alfred},
+  journal={Rock joints},
+  pages={35--44},
+  year={1990},
+  publisher={AA Balkema Rotterdam},
+  language = {english}
+}
+
+@article{secor1965role,
+  title={Role of fluid pressure in jointing},
+  author={Secor, D. T.},
+  journal={American Journal of Science},
+  volume={263},
+  number={8},
+  pages={633--646},
+  year={1965},
+  publisher={American Journal of Science},
+  language = {english}
+}
+
+@article{sonnenberg2009petroleum,
+  title={Petroleum geology of the giant Elm Coulee field, Williston Basin},
+  author={Sonnenberg, S. A. and Pramudito, Aris},
+  journal={AAPG bulletin},
+  volume={93},
+  number={9},
+  pages={1127--1153},
+  year={2009},
+  publisher={American Association of Petroleum Geologists (AAPG)},
+  language = {english}
+}
+
+@article{li2012pore,
+  title={Pore-pressure and wellbore-stability prediction to increase drilling efficiency},
+  author={Li, Shuling and {[et al.]}},
+  journal={Journal of Petroleum Technology},
+  volume={64},
+  number={02},
+  pages={98--101},
+  year={2012},
+  publisher={Society of Petroleum Engineers},
+  language = {english}
+}
+
+@article{olson2004,
+  title = "Predicting fracture swarms - the influence of subcritical crack growth and the crack-tip process zoneon joint spacing in rock",
+  journal = "Geological Society, London, Special Publications",
+  volume="231",
+  number="1",
+  pages="73 - 88",
+  year="2004",
+  publisher="Geological Society of London",
+  author={Olson, J. E.},
+  language = {english}
+}
+
+@article{warpinski2009stimulating,
+  title = {Stimulating unconventional reservoirs: maximizing network growth while optimizing fracture conductivity},
+  journal={Journal of Canadian Petroleum Technology},
+  volume={48},
+  number={10},
+  pages={39--51},
+  year={2009},
+  publisher={Society of Petroleum Engineers},
+  author={Warpinski, N. R. and {[et al.]}},
+  language = {english}
+}
+
+@article{wu2014generalized,
+  title={A generalized framework model for the simulation of gas production in unconventional gas reservoirs},
+  author={Wu, {Yu-Shs} and {[et al.]}},
+  journal={Spe Journal},
+  volume={19},
+  number={05},
+  pages={845--857},
+  year={2014},
+  publisher={Society of Petroleum Engineers},
+  language = {english}
+}
+
+@article{fertl1976abnormal,
+  title={Abnormal formation pressures: developments in petroleum science},
+  author={Fertl, W. H.},
+  journal={Amsterdam, Elsevier Scientific Pub. Co.},
+  number={2},
+  pages={382},
+  year={1976},
+  language = {english}
+}
+
+@article{magara1978significance,
+  title={The significance of the expulsion of water in oil-phase primary migration},
+  author={Magara, Kinji},
+  journal={Bulletin of Canadian Petroleum Geology},
+  volume={26},
+  number={1},
+  pages={123--131},
+  year={1978},
+  publisher={Canadian Society of Petroleum Geologists},
+  language = {english}
+}
+
+@article{luo2002natural,
+  title={Natural hydraulic cracking: numerical model and sensitivity study},
+  author={Luo, Xiaorong and Vasseur, Guy},
+  journal={Earth and Planetary Science Letters},
+  volume={201},
+  number={2},
+  pages={431--446},
+  year={2002},
+  publisher={Elsevier},
+  language = {english}
+}
+
+@article{eseme2007review,
+  title={Review of mechanical properties of oil shales: implications for exploitation and basin modeling.},
+  author={Eseme, E. and {[et al.]}},
+  journal={Oil shale},
+  volume={24},
+  number={2},
+  year={2007},
+  language = {english}
+}
+
+@article{abousleiman2005poromechanics,
+  title={Poromechanics response of inclined wellbore geometry in fractured porous media},
+  author={Abousleiman, Younane and Nguyen, Vinh},
+  journal={Journal of engineering mechanics},
+  volume={131},
+  number={11},
+  pages={1170--1183},
+  year={2005},
+  publisher={American Society of Civil Engineers},
+  language = {english}
+}
+
+@article{snow1968rock,
+  title={Rock fracture spacings, openings, and porosities},
+  author={Snow, David T.},
+  journal={Journal of Soil Mechanics \& Foundations Div},
+  year={1968},
+  language = {english}
+}
+
+@article{barati2014review,
+  title={A review of fracturing fluid systems used for hydraulic fracturing of oil and gas wells},
+  author={Barati, Reza and Liang, Jenn-Tai},
+  journal={Journal of Applied Polymer Science},
+  volume={131},
+  number={16},
+  year={2014},
+  publisher={Wiley Online Library},
+  language={english}
 }
 
 % Real example (from Google or Springer)
@@ -561,6 +916,15 @@ keywords = "Glass ceramic",
   url =          {http://cs.jhu.edu/~jason/papers/\#icassp07}
 }
 
+@InProceedings{abousleiman2007geomechanics,
+  title={Geomechanics field and laboratory characterization of the Woodford Shale: The next gas play},
+  author={Abousleiman, Y. N. and {[et al.]}},
+  booktitle={SPE Annual Technical Conference and Exhibition},
+  year={2007},
+  organization={Society of Petroleum Engineers},
+  language={english}
+}
+
 @InProceedings{test:eisner-sample-shorted,
   author =       {Damianos Karakos and Sanjeev Khudanpur and Jason
                   Eisner and Carey~E. Priebe},
@@ -571,6 +935,16 @@ keywords = "Glass ceramic",
   shortbooktitle = {Proc. of ICASSP},
   year =         2007,
   url =          {http://cs.jhu.edu/~jason/papers/\#icassp07}
+}
+
+@InProceedings{ye2016fracture,
+  title={Fracture properties characterization of shale rocks},
+  author={Ye, Zhi and Ghassemi, Ahmad and Riley, Spencer},
+  booktitle={Unconventional Resources Technology Conference, San Antonio, Texas, 1-3 August 2016},
+  pages={1083--1095},
+  year={2016},
+  organization={Society of Exploration Geophysicists, American Association of Petroleum~…},
+  language={english}
 }
 
 % Попытка записать патент имеющимися средствами
