--- a/common/concl.tex
+++ b/common/concl.tex
@@ -2,8 +2,9 @@
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
-  \item На основе анализа \ldots
-  \item Численные исследования показали, что \ldots
-  \item Математическое моделирование показало \ldots
-  \item Для выполнения поставленных задач был создан \ldots
+  \item Разработана термодинамически согласованная модель двойной пористой среды с трещиноватым скелетом, отличительной особенностью которой является учет влияния аномально высокого пластового давления  на интенсивность массообмена между континуумами матриц и трещин. Для этого в модель введена внутренняя переменная (параметр разрушения), характеризующая процесс разрушения низкопроницаемой матрицы вследствие комбинации процессов, связанных с изменением как порового давления, так и с изменением напряженного состояния скелета.
+  \item Проведен качественный и количественный анализ параметров модели.
+  \item Численные исследования показали, что аномально высокое пластовое давление может приводить к разрушению в низкопроницаемой матрице вблизи окрестности скважины. Подобные условия возникают вследствие возмущений, связанных с резким уменьшением давления в трещинах по сравнению с поровым давлением в матрицах, а также связанных с изменением полного напряжения в скелете в окрестности скважины. В результате этих возмущений фактически увеличивается эффективный радиус скважины (увеличивается размер области дренирования).
+  \item Продемонстрирована принципиальная возможность разработки низкопроницаемых трещиновато-пористых месторождений,~--- используя только энергию аномально высокого пластового давления.
+
 \end{enumerate}
