--- a/Dissertation/introduction.tex
+++ b/Dissertation/introduction.tex
@@ -14,12 +14,10 @@
 \newcommand{\contribution}{\textbf{\contributionTXT}}
 \newcommand{\publications}{\textbf{\publicationsTXT}}
 
+% \input{common/annotation}
 \input{common/characteristic} % Характеристика работы по структуре во введении и в автореферате не отличается (ГОСТ Р 7.0.11, пункты 5.3.1 и 9.2.1), потому её загружаем из одного и того же внешнего файла, предварительно задав форму выделения некоторым параметрам
 
-\textbf{Объем и структура работы.} Диссертация состоит из~введения,
-\formbytotal{totalchapter}{глав}{ы}{}{},
-заключения и
-\formbytotal{totalappendix}{приложен}{ия}{ий}{}.
+\textbf{Объем и структура работы.} Диссертация состоит из~введения, трёх глав и заключения.
 %% на случай ошибок оставляю исходный кусок на месте, закомментированным
 %Полный объём диссертации составляет  \ref*{TotPages}~страницу
 %с~\totalfigures{}~рисунками и~\totaltables{}~таблицами. Список литературы
@@ -28,6 +26,5 @@
 Полный объём диссертации составляет
 \formbytotal{TotPages}{страниц}{у}{ы}{}, включая
 \formbytotal{totalcount@figure}{рисун}{ок}{ка}{ков} и
-\formbytotal{totalcount@table}{таблиц}{у}{ы}{}.
-Список литературы содержит
+\formbytotal{totalcount@table}{таблиц}{у}{ы}{}.   Список литературы содержит
 \formbytotal{citenum}{наименован}{ие}{ия}{ий}.
