--- a/Dissertation/title.tex
+++ b/Dissertation/title.tex
@@ -13,7 +13,7 @@
   \end{minipage}%
   \begin{minipage}[b]{0.5\linewidth}
     \begin{flushright}
-      На правах рукописи\\
+    %   На правах рукописи\\
 %      \textsl {УДК \thesisUdk}
     \end{flushright}
   \end{minipage}
@@ -74,7 +74,7 @@
 \ifdefined\supervisorTwoDead
 \framebox{\supervisorTwoFio}
 \else
-\supervisorTwoFio
+\supervisorFio
 \fi
 \else
 Научный руководитель:
