--- a/common/data.tex
+++ b/common/data.tex
@@ -1,7 +1,7 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\fixme{Фамилия}}
-\newcommand{\thesisAuthorOtherNames}{\fixme{Имя Отчество}}
-\newcommand{\thesisAuthorInitials}{\fixme{И.\,О.}}
+\newcommand{\thesisAuthorLastName}{Чепрасов}
+\newcommand{\thesisAuthorOtherNames}{Иван Андреевич}
+\newcommand{\thesisAuthorInitials}{И.\,А.}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
@@ -15,46 +15,43 @@
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\fixme{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\fixme{Длинное название диссертационной работы, состоящее из~достаточно большого
-количества слов, совсем длинное длинное длинное длинное название, из~которого
-простому обывателю знакомы, в~лучшем случае, лишь отдельные слова}}
+{{Термодинамически согласованная модель фильтрации в упругой хрупкой среде с двойной пористостью}}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\fixme{XX.XX.XX}}
+{03.04.01}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
-{\fixme{Технология обработки, хранения и~переработки злаковых, бобовых культур,
-крупяных продуктов, плодоовощной продукции и~виноградарства}}
+{{Прикладные математика и физика}}
 %% \newcommand{\thesisSpecialtyTwoNumber} % Диссертация, вторая специальность, номер
 %% {\fixme{XX.XX.XX}}
 %% \newcommand{\thesisSpecialtyTwoTitle}  % Диссертация, вторая специальность, название
 %% {\fixme{Теория и~методика физического воспитания, спортивной тренировки,
 %% оздоровительной и~адаптивной физической культуры}}
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
-{\fixme{кандидата физико-математических наук}}
+{{магистра}}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
 {\fixme{канд. физ.-мат. наук}}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
-{\fixme{Город}}
+{{Долгопрудный}}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
 {\the\year}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{\fixme{Федеральное государственное автономное образовательное учреждение высшего
-образования <<Длинное название образовательного учреждения <<АББРЕВИАТУРА>>}}
+{{Федеральное государственное автономное образовательное учреждение высшего образования <<Московский физико-технический институт (национальный исследовательский университет)>>
+\\
+<<МФТИ>>}}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
-{\fixme{НазУчДисРаб}}
+{\fixme{МФТИ}}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{\fixme{учреждении с~длинным длинным длинным длинным названием, в~котором
-выполнялась данная диссертационная работа}}
+{Московском физико-техническом институте (НИУ)}
 
 %% \newcommand{\supervisorDead}{}           % Рисовать рамку вокруг фамилии
 \newcommand{\supervisorFio}              % Научный руководитель, ФИО
-{\fixme{Фамилия Имя Отчество}}
+{{Извеков Олег Ярославович}}
 \newcommand{\supervisorRegalia}          % Научный руководитель, регалии
-{\fixme{уч. степень, уч. звание}}
+{{кандидат физико-математических наук}}
 \newcommand{\supervisorFioShort}         % Научный руководитель, ФИО
-{\fixme{И.\,О.~Фамилия}}
+{{О.\,Я.~Извеков}}
 \newcommand{\supervisorRegaliaShort}     % Научный руководитель, регалии
-{\fixme{уч.~ст.,~уч.~зв.}}
+{{к.ф.-м.н.}}
 
 %% \newcommand{\supervisorTwoDead}{}        % Рисовать рамку вокруг фамилии
 %% \newcommand{\supervisorTwoFio}           % Второй научный руководитель, ФИО
